se modifican rutas

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
             <div class="caja">
 
-                <h1><img src="imagenes/logo.png" alt="logo de la barbería"></h1>
+                <h1><img src="logo.png" alt="logo de la barbería"></h1>
 
                 <nav>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="productos.html">Productos</a></li>
+                        <li><a href="https://yesid777.github.io/barberia_yesid77_parte1/">Home</a></li>
+                        <li><a href="https://yesid777.github.io/barberia_yesid77_parte2/">Productos</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
 
@@ -112,7 +112,7 @@
         </main>
 
         <footer>
-            <img src="imagenes/logo-blanco.png" alt="logo de la barbería">
+            <img src="logo-blanco.png" alt="logo de la barbería">
             <p class="copyrght">&copy Copyrght Barbería Yesid777</p><!--&copy genera el caracer especial de Copyrght-->
         </footer>
 
