--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <ul>
                         <li><a href="https://yesid777.github.io/barberia_yesid77_parte1/">Home</a></li>
                         <li><a href="https://yesid777.github.io/barberia_yesid77_parte2/">Productos</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
+                        <li><a href="index.html">Contacto</a></li>
                     </ul>
 
                 </nav>
