--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                 <nav>
                     <ul>
-                        <li><a href="https://yesid777.github.io/barberia_yesid77_parte1/">Home</a></li>
+                        <li><a href="https://yesid777.github.io/barberia777_final/">Home</a></li>
                         <li><a href="https://yesid777.github.io/barberia_yesid77_parte2/">Productos</a></li>
                         <li><a href="https://yesid777.github.io/barberia_yesid77_parte3/">Contacto</a></li>
                     </ul>
